apps/globomantics-hotel/overlays/dev/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-guestbook-ingress
  annotations:
  #   # Traefik annotations
  #   traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
  #   # Nginx SSL redirect
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx  # Override default nginx if needed; traefik
  rules:
  - host: guestbook.frontend.susmita.hotel
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guestbook-frontend
            port:
              number: 80
  - host: guestbook.backend.susmita.hotel
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guestbook-backend
            port:
              number: 80
  tls:
    - hosts:
        - guestbook.frontend.susmita.hotel
        - guestbook.backend.susmita.hotel
      secretName: guestbook-tls-secret
